--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "monolog/monolog": "1.0.*",
+        "monolog/monolog": "1.0.2",
         "php": ">=5.5"
     },
     "require-dev": {
